@@ -118,7 +118,6 @@ import org.jkiss.dbeaver.ui.editors.*;
 import org.jkiss.dbeaver.ui.editors.sql.addins.SQLEditorAddIn;
 import org.jkiss.dbeaver.ui.editors.sql.addins.SQLEditorAddInDescriptor;
 import org.jkiss.dbeaver.ui.editors.sql.addins.SQLEditorAddInsRegistry;
-import org.jkiss.dbeaver.ui.editors.sql.ai.suggestion.AISuggestionTextPainter;
 import org.jkiss.dbeaver.ui.editors.sql.commands.MultipleResultsPerTabMenuContribution;
 import org.jkiss.dbeaver.ui.editors.sql.execute.SQLQueryJob;
 import org.jkiss.dbeaver.ui.editors.sql.handlers.SQLEditorHandlerSwitchPresentation;
@@ -132,6 +131,7 @@ import org.jkiss.dbeaver.ui.editors.sql.registry.SQLPresentationDescriptor;
 import org.jkiss.dbeaver.ui.editors.sql.registry.SQLPresentationPanelDescriptor;
 import org.jkiss.dbeaver.ui.editors.sql.registry.SQLPresentationRegistry;
 import org.jkiss.dbeaver.ui.editors.sql.scripts.ScriptsHandlerImpl;
+import org.jkiss.dbeaver.ui.editors.sql.suggestion.SQLSuggestionTextPainter;
 import org.jkiss.dbeaver.ui.editors.sql.syntax.SQLEditorCompletionContext;
 import org.jkiss.dbeaver.ui.editors.sql.variables.AssignVariableAction;
 import org.jkiss.dbeaver.ui.editors.sql.variables.SQLVariablesPanel;
@@ -151,8 +151,8 @@ import java.net.URI;
 import java.nio.file.Path;
 import java.text.SimpleDateFormat;
 import java.time.Duration;
-import java.util.*;
 import java.util.List;
+import java.util.*;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.function.Consumer;
 import java.util.regex.Matcher;
@@ -198,12 +198,14 @@ public class SQLEditor extends SQLEditorBase implements
 
     public static final String VIEW_PART_PROP_NAME = "org.jkiss.dbeaver.ui.editors.sql.SQLEditor";
 
-    public static final String DEFAULT_TITLE_PATTERN = "<${" + SQLPreferenceConstants.VAR_CONNECTION_NAME + "}> ${" + SQLPreferenceConstants.VAR_FILE_NAME + "}";
+    public static final String DEFAULT_TITLE_PATTERN = "<${" + SQLPreferenceConstants.VAR_CONNECTION_NAME + "}> ${"
+        + SQLPreferenceConstants.VAR_FILE_NAME + "}";
     public static final String DEFAULT_SCRIPT_FILE_NAME = "Script";
-    
+
     private static final EditorPartContextualProperty multipleResultsPerTabProperty = EditorPartContextualProperty.setup(
         MULTIPLE_RESULTS_PER_TAB_PROPERTY, MULTIPLE_RESULTS_PER_TAB_PROP_NAME,
-        SQLPreferenceConstants.MULTIPLE_RESULTS_PER_TAB, CommonUtils.toString(false));
+        SQLPreferenceConstants.MULTIPLE_RESULTS_PER_TAB, CommonUtils.toString(false)
+    );
 
     private static volatile TransactionStatusUpdateJob transactionStatusUpdateJob;
 
@@ -258,10 +260,10 @@ public class SQLEditor extends SQLEditorBase implements
 
     private final ArrayList<SQLEditorAddIn> addIns = new ArrayList<>();
 
-    private AISuggestionTextPainter AISuggestionTextPainter;
+    private SQLSuggestionTextPainter suggestionTextPainter;
 
-    public AISuggestionTextPainter getSuggestionTextPainter() {
-        return AISuggestionTextPainter;
+    public SQLSuggestionTextPainter getSuggestionTextPainter() {
+        return suggestionTextPainter;
     }
 
     private static class ServerOutputInfo {
@@ -310,11 +312,12 @@ public class SQLEditor extends SQLEditorBase implements
 
     @Override
     protected String[] getKeyBindingContexts() {
-        return new String[]{
+        return new String[] {
             TEXT_EDITOR_CONTEXT,
             SQLEditorContributions.SQL_EDITOR_CONTEXT,
             SQLEditorContributions.SQL_EDITOR_SCRIPT_CONTEXT,
-            IResultSetController.RESULTS_CONTEXT_ID};
+            IResultSetController.RESULTS_CONTEXT_ID
+        };
     }
 
     @Nullable
@@ -349,11 +352,11 @@ public class SQLEditor extends SQLEditorBase implements
     }
 
     @Nullable
-    public DBPProject getProject()
-    {
+    public DBPProject getProject() {
         IFile file = EditorUtils.getFileFromInput(getEditorInput());
         return file == null ?
-            DBWorkbench.getPlatform().getWorkspace().getActiveProject() : DBPPlatformDesktop.getInstance().getWorkspace().getProject(file.getProject());
+            DBWorkbench.getPlatform().getWorkspace().getActiveProject()
+            : DBPPlatformDesktop.getInstance().getWorkspace().getProject(file.getProject());
     }
 
     private boolean isProjectResourceEditable() {
@@ -376,8 +379,7 @@ public class SQLEditor extends SQLEditorBase implements
 
     @Nullable
     @Override
-    public int[] getCurrentLines()
-    {
+    public int[] getCurrentLines() {
         synchronized (runningQueries) {
             IDocument document = getDocument();
             if (document == null || runningQueries.isEmpty()) {
@@ -408,8 +410,7 @@ public class SQLEditor extends SQLEditorBase implements
 
     @Nullable
     @Override
-    public DBPDataSourceContainer getDataSourceContainer()
-    {
+    public DBPDataSourceContainer getDataSourceContainer() {
         return dataSourceContainer;
     }
 
@@ -471,7 +472,7 @@ public class SQLEditor extends SQLEditorBase implements
                 DBWorkbench.getPlatformUI().showError(
                     "Can't connect to database", "Connection to '" + container.getName() + "' cannot be established.", status);
             }
-//            setFocus();
+            //            setFocus();
         }));
         setPartName(getEditorName());
 
@@ -591,7 +592,8 @@ public class SQLEditor extends SQLEditorBase implements
                         connSpec,
                         null,
                         true,
-                        false);
+                        false
+                    );
                     if (dataSource != null) {
                         return dataSource;
                     }
@@ -635,7 +637,8 @@ public class SQLEditor extends SQLEditorBase implements
                 // Remove connection association
                 document.replace(region.getOffset(), region.getLength(), "");
             } else {
-                SQLScriptBindingType bindingType = SQLScriptBindingType.valueOf(DBWorkbench.getPlatform().getPreferenceStore().getString(SQLPreferenceConstants.SCRIPT_BIND_COMMENT_TYPE));
+                SQLScriptBindingType bindingType = SQLScriptBindingType.valueOf(DBWorkbench.getPlatform().getPreferenceStore()
+                    .getString(SQLPreferenceConstants.SCRIPT_BIND_COMMENT_TYPE));
 
                 StringBuilder assocSpecLine = new StringBuilder(EMBEDDED_BINDING_PREFIX);
                 bindingType.appendSpec(dataSourceContainer, assocSpecLine);
@@ -736,8 +739,12 @@ public class SQLEditor extends SQLEditorBase implements
     public void refreshActions() {
         // Redraw toolbar to refresh action sets
         this.updateMultipleResultsPerTabToolItem();
-        if (topBarMan != null) topBarMan.getControl().redraw();
-        if (bottomBarMan != null) bottomBarMan.getControl().redraw();
+        if (topBarMan != null) {
+            topBarMan.getControl().redraw();
+        }
+        if (bottomBarMan != null) {
+            bottomBarMan.getControl().redraw();
+        }
         MultipleResultsPerTabMenuContribution.syncWithEditor(this);
     }
 
@@ -767,7 +774,7 @@ public class SQLEditor extends SQLEditorBase implements
                 if (readDefaultsFromInstance && datasourceChanged) {
                     DBCExecutionContext defaultContext = DBUtils.getDefaultContext(instance, false);
                     if (defaultContext != null) {
-                        DBCExecutionContextDefaults<?,?> contextDefaultsDB = defaultContext.getContextDefaults();
+                        DBCExecutionContextDefaults<?, ?> contextDefaultsDB = defaultContext.getContextDefaults();
                         if (contextDefaultsDB != null) {
                             contextDefaultNames = new String[2];
                             contextDefaultNames[0] = contextDefaultsDB.getDefaultCatalog() != null ?
@@ -782,12 +789,19 @@ public class SQLEditor extends SQLEditorBase implements
                         EditorUtils.getInputContextDefaults(instance.getDataSource().getContainer(), getEditorInput()) : null;
                 }
                 if (contextDefaultNames != null && contextDefaultNames.length > 1 &&
-                    (!CommonUtils.isEmpty(contextDefaultNames[0]) || !CommonUtils.isEmpty(contextDefaultNames[1])))
-                {
+                    (!CommonUtils.isEmpty(contextDefaultNames[0]) || !CommonUtils.isEmpty(contextDefaultNames[1]))) {
                     try {
-                        DBExecUtils.setExecutionContextDefaults(monitor, newContext.getDataSource(), newContext, contextDefaultNames[0], null, contextDefaultNames[1]);
+                        DBExecUtils.setExecutionContextDefaults(
+                            monitor,
+                            newContext.getDataSource(),
+                            newContext,
+                            contextDefaultNames[0],
+                            null,
+                            contextDefaultNames[1]
+                        );
                     } catch (DBException e) {
-                        DBWorkbench.getPlatformUI().showError("New connection default", "Error setting default catalog/schema for new connection", e);
+                        DBWorkbench.getPlatformUI()
+                            .showError("New connection default", "Error setting default catalog/schema for new connection", e);
                     }
                 }
                 SQLEditor.this.executionContext = newContext;
@@ -838,6 +852,7 @@ public class SQLEditor extends SQLEditorBase implements
 
     private static class CloseContextJob extends AbstractJob {
         private final DBCExecutionContext context;
+
         CloseContextJob(DBCExecutionContext context) {
             super("Close context " + context.getContextName());
             this.context = context;
@@ -920,8 +935,7 @@ public class SQLEditor extends SQLEditorBase implements
 
     @Nullable
     @Override
-    public <T> T getAdapter(Class<T> required)
-    {
+    public <T> T getAdapter(Class<T> required) {
         if (required == INavigatorModelView.class) {
             return null;
         }
@@ -954,8 +968,7 @@ public class SQLEditor extends SQLEditorBase implements
         return super.getAdapter(required);
     }
 
-    protected boolean checkConnected(boolean forceConnect, DBRProgressListener onFinish)
-    {
+    public boolean checkConnected(boolean forceConnect, DBRProgressListener onFinish) {
         // Connect to datasource
         final DBPDataSourceContainer dataSourceContainer = getDataSourceContainer();
         boolean doConnect = dataSourceContainer != null &&
@@ -967,7 +980,11 @@ public class SQLEditor extends SQLEditorBase implements
                     // Start connect visualizer
                     ConnectVisualizer connectVisualizer = new ConnectVisualizer();
                     serviceConnections.connectDataSource(dataSourceContainer, status -> {
-                        if (onFinish != null) onFinish.onTaskFinished(status);
+                        // We must reload syntax to refresh context
+                        UIUtils.syncExec(this::reloadSyntaxRules);
+                        if (onFinish != null) {
+                            onFinish.onTaskFinished(status);
+                        }
                         connectVisualizer.stop();
                     });
                 }
@@ -982,9 +999,10 @@ public class SQLEditor extends SQLEditorBase implements
 
         // divides editor area and results/panels area
         resultsSash = UIUtils.createPartDivider(
-                this,
-                parent,
-                resultSetOrientation.getSashOrientation() | SWT.SMOOTH);
+            this,
+            parent,
+            resultSetOrientation.getSashOrientation() | SWT.SMOOTH
+        );
         resultsSash.setShowBorders(true);
         CSSUtils.setCSSClass(resultsSash, DBStyles.COLORED_BY_CONNECTION_TYPE);
         resultsSash.setSashWidth(8);
@@ -1070,22 +1088,30 @@ public class SQLEditor extends SQLEditorBase implements
                 });
             }
         }
-        AISuggestionTextPainter = new AISuggestionTextPainter(getViewer());
-        AISuggestionTextPainter.enable();
+        suggestionTextPainter = new SQLSuggestionTextPainter(getViewer());
+        suggestionTextPainter.enable();
 
         StyledText textWidget = getViewer().getTextWidget();
         textWidget.addVerifyKeyListener(e -> {
-            if (e.keyCode == SWT.ARROW_RIGHT && AISuggestionTextPainter.hasContentToShow()) {
+            if ((e.keyCode == SWT.ARROW_RIGHT || e.keyCode == SWT.TAB || e.keyCode == SWT.CR || e.keyCode == SWT.KEYPAD_CR)
+                && suggestionTextPainter.hasContentToShow()
+            ) {
                 e.doit = false;
-                AISuggestionTextPainter.applyHint();
+                suggestionTextPainter.applyHint();
+            }
+        });
+        textWidget.addVerifyKeyListener(e -> {
+            if (e.keyCode == SWT.ESC) {
+                e.doit = false;
+                suggestionTextPainter.removeHint();
             }
         });
         textWidget.addCaretListener(event -> {
-            if (AISuggestionTextPainter.hasContentToShow()) {
+            if (suggestionTextPainter.hasContentToShow()) {
                 int caretOffset = event.caretOffset;
-                int suggestionOffset = AISuggestionTextPainter.getCurrentPosition();
+                int suggestionOffset = suggestionTextPainter.getCurrentPosition();
                 if (caretOffset != suggestionOffset) {
-                    AISuggestionTextPainter.removeHint();
+                    suggestionTextPainter.removeHint();
                 }
             }
         });
@@ -1112,7 +1138,8 @@ public class SQLEditor extends SQLEditorBase implements
         BaseThemeSettings.instance.addPropertyListener(
             UIFonts.DBEAVER_FONTS_MAIN_FONT,
             fontUpdater,
-            parent);
+            parent
+        );
         fontUpdater.accept(null);
 
         if (transactionStatusUpdateJob == null) {
@@ -1135,8 +1162,8 @@ public class SQLEditor extends SQLEditorBase implements
         if (getActivePreferenceStore().getBoolean(SQLPreferenceConstants.AUTO_SAVE_ON_CHANGE)) {
             doScriptAutoSave();
         }
-        if (AISuggestionTextPainter != null) {
-            AISuggestionTextPainter.removeHint();
+        if (suggestionTextPainter != null) {
+            suggestionTextPainter.removeHint();
         }
     }
 
@@ -1184,7 +1211,7 @@ public class SQLEditor extends SQLEditorBase implements
 
         bottomBar.pack();
         bottomBarMan.update(true);
-        
+
         updateMultipleResultsPerTabToolItem();
     }
 
@@ -1240,13 +1267,7 @@ public class SQLEditor extends SQLEditorBase implements
     public boolean validateEditorInputState() {
         boolean res = super.validateEditorInputState();
         if (res) {
-            SourceViewer viewer = getViewer();
-            if (viewer != null) {
-                StyledText textWidget = viewer.getTextWidget();
-                if (textWidget != null && !textWidget.isDisposed()) {
-                    textWidget.setFocus();
-                }
-            }
+            setFocusToTextControl();
         }
         return res;
     }
@@ -1391,7 +1412,7 @@ public class SQLEditor extends SQLEditorBase implements
                 return;
             }
             CTabItem selectedItem = resultTabs.getItem(new Point(event.getBounds().x, event.getBounds().y));
-            if (selectedItem != null && selectedItem  == resultTabs.getSelection()) {
+            if (selectedItem != null && selectedItem == resultTabs.getSelection()) {
                 toggleEditorMaximize();
             }
         });
@@ -1546,7 +1567,11 @@ public class SQLEditor extends SQLEditorBase implements
                         manager.add(new Action(SQLEditorMessages.action_result_tabs_set_name) {
                             @Override
                             public void run() {
-                                EnterNameDialog dialog = new EnterNameDialog(resultTabs.getShell(), SQLEditorMessages.action_result_tabs_set_name_title, activeTab.getText());
+                                EnterNameDialog dialog = new EnterNameDialog(
+                                    resultTabs.getShell(),
+                                    SQLEditorMessages.action_result_tabs_set_name_title,
+                                    activeTab.getText()
+                                );
                                 if (dialog.open() == IDialogConstants.OK_ID) {
                                     container.setTabName(dialog.getResult());
                                 }
@@ -1629,9 +1654,15 @@ public class SQLEditor extends SQLEditorBase implements
         CTabItem outTab = getExtraViewTab(outputViewer);
         CTabItem logTab = getExtraViewTab(logViewer);
         CTabItem varTab = getExtraViewTab(variablesViewer);
-        if (outTab != null) outTab.dispose();
-        if (logTab != null) logTab.dispose();
-        if (varTab != null) varTab.dispose();
+        if (outTab != null) {
+            outTab.dispose();
+        }
+        if (logTab != null) {
+            logTab.dispose();
+        }
+        if (varTab != null) {
+            varTab.dispose();
+        }
 
         IPreferenceStore preferenceStore = getPreferenceStore();
         String epLocation = getExtraPanelsLocation();
@@ -1644,9 +1675,15 @@ public class SQLEditor extends SQLEditorBase implements
 
         createExtraViewControls();
 
-        if (outTab != null) showOutputPanel(true);
-        if (logTab != null) showExecutionLogPanel(true);
-        if (varTab != null) showVariablesPanel(true);
+        if (outTab != null) {
+            showOutputPanel(true);
+        }
+        if (logTab != null) {
+            showExecutionLogPanel(true);
+        }
+        if (varTab != null) {
+            showVariablesPanel(true);
+        }
     }
 
     public String getExtraPanelsLocation() {
@@ -1788,7 +1825,8 @@ public class SQLEditor extends SQLEditorBase implements
             getSite(),
             "org.jkiss.dbeaver.ui.editors.sql.toggle.extraPanels",
             CommandContributionItem.STYLE_CHECK,
-            UIIcon.ARROW_DOWN));
+            UIIcon.ARROW_DOWN
+        ));
         sqlExtraPanelToolbar.update(true);
     }
 
@@ -1800,7 +1838,7 @@ public class SQLEditor extends SQLEditorBase implements
         }
         return viewItem;
     }
-    
+
     private CTabItem getActiveResultsTab() {
         return activeResultsTab == null || activeResultsTab.isDisposed() ?
             (resultTabs == null ? null : resultTabs.getSelection()) : activeResultsTab;
@@ -1813,7 +1851,7 @@ public class SQLEditor extends SQLEditorBase implements
             activeResultsTab = null;
         }
     }
-    
+
     /**
      * Toggle isPinned value of active tab container,
      * then move tab to left of all unpinned tabs if pinning,
@@ -1822,7 +1860,7 @@ public class SQLEditor extends SQLEditorBase implements
     public void toggleActiveTabPinned() {
         CTabItem activeTab = getActiveResultsTab();
         QueryResultsContainer container = (QueryResultsContainer) activeTab.getData();
-        
+
         if (!container.hasData()) {
             return;
         }
@@ -1872,7 +1910,8 @@ public class SQLEditor extends SQLEditorBase implements
             IMG_OUTPUT,
             outputViewer,
             manager -> manager.add(new OutputAutoShowToggleAction()),
-            show);
+            show
+        );
     }
 
     public void showExecutionLogPanel(@Nullable Boolean show) {
@@ -1883,7 +1922,8 @@ public class SQLEditor extends SQLEditorBase implements
             IMG_LOG,
             logViewer,
             null,
-            show);
+            show
+        );
     }
 
     public void showVariablesPanel(@Nullable Boolean show) {
@@ -1894,7 +1934,8 @@ public class SQLEditor extends SQLEditorBase implements
             IMG_VARIABLES,
             variablesViewer,
             null,
-            show);
+            show
+        );
         UIUtils.asyncExec(() -> variablesViewer.refreshVariables());
     }
 
@@ -1992,11 +2033,9 @@ public class SQLEditor extends SQLEditorBase implements
         try {
             if (extraPresentationManager.activePresentation == null) {
                 stackLayout.topControl = presentationStack.getChildren()[0];
-                getEditorControlWrapper().setFocus();
                 getSite().setSelectionProvider(new DynamicSelectionProvider());
             } else {
                 stackLayout.topControl = extraPresentationManager.getActivePresentationControl();
-                extraPresentationManager.getActivePresentationControl().setFocus();
                 getSite().setSelectionProvider(extraPresentationManager.activePresentation.getSelectionProvider());
             }
 
@@ -2056,6 +2095,15 @@ public class SQLEditor extends SQLEditorBase implements
             }
 
             presentationStack.layout(true, true);
+
+            UIUtils.asyncExec(() -> {
+                if (extraPresentationManager.activePresentation == null) {
+                    setFocusToTextControl();
+                } else {
+                    extraPresentationManager.getActivePresentationControl().setFocus();
+                }
+            });
+
         } finally {
             resultsSash.setRedraw(true);
         }
@@ -2141,7 +2189,8 @@ public class SQLEditor extends SQLEditorBase implements
 
     private void updateResultSetOrientation() {
         try {
-            resultSetOrientation = ResultSetOrientation.valueOf(DBWorkbench.getPlatform().getPreferenceStore().getString(SQLPreferenceConstants.RESULT_SET_ORIENTATION));
+            resultSetOrientation = ResultSetOrientation.valueOf(DBWorkbench.getPlatform().getPreferenceStore()
+                .getString(SQLPreferenceConstants.RESULT_SET_ORIENTATION));
         } catch (IllegalArgumentException e) {
             resultSetOrientation = ResultSetOrientation.HORIZONTAL;
         }
@@ -2224,8 +2273,7 @@ public class SQLEditor extends SQLEditorBase implements
 
     @Override
     public void init(IEditorSite site, IEditorInput editorInput)
-        throws PartInitException
-    {
+    throws PartInitException {
         super.init(site, editorInput);
 
         updateResultSetOrientation();
@@ -2246,7 +2294,8 @@ public class SQLEditor extends SQLEditorBase implements
             this,
             null,
             new OutputLogWriter(),
-            new SQLEditorParametersProvider(site)) {
+            new SQLEditorParametersProvider(site)
+        ) {
             @Override
             public Path getSourceFile() {
                 return EditorUtils.getPathFromInput(getEditorInput());
@@ -2262,10 +2311,12 @@ public class SQLEditor extends SQLEditorBase implements
             public void variableChanged(ContextAction action, DBCScriptContext.VariableInfo variable) {
                 saveContextVariables();
             }
+
             @Override
             public void parameterChanged(ContextAction action, String name, Object value) {
                 saveContextVariables();
             }
+
             private void saveContextVariables() {
                 new AbstractJob("Save variables") {
                     @Override
@@ -2319,7 +2370,12 @@ public class SQLEditor extends SQLEditorBase implements
             // Something bad may happen. E.g. OutOfMemory error in case of too big input file.
             StringWriter out = new StringWriter();
             e.printStackTrace(new PrintWriter(out, true));
-            editorInput = new StringEditorInput("Error", CommonUtils.truncateString(out.toString(), 10000), true, GeneralUtils.UTF8_ENCODING);
+            editorInput = new StringEditorInput(
+                "Error",
+                CommonUtils.truncateString(out.toString(), 10000),
+                true,
+                GeneralUtils.UTF8_ENCODING
+            );
             try {
                 super.doSetInput(editorInput);
             } catch (Throwable ex) {
@@ -2385,7 +2441,7 @@ public class SQLEditor extends SQLEditorBase implements
                     file.refreshLocal(IResource.DEPTH_ONE, new NullProgressMonitor());
                 }
                 if (!file.exists()) {
-                    file.create(new ByteArrayInputStream(new byte[]{}), true, new NullProgressMonitor());
+                    file.create(new ByteArrayInputStream(new byte[] {}), true, new NullProgressMonitor());
                 }
             }
         } catch (Exception e) {
@@ -2409,12 +2465,12 @@ public class SQLEditor extends SQLEditorBase implements
         }
         final IEditorInput editorInput = getEditorInput();
         String scriptPath;
-        if (editorInput instanceof IFileEditorInput) {
-            scriptPath = ((IFileEditorInput) editorInput).getFile().getFullPath().toString();
-        } else if (editorInput instanceof IPathEditorInput) {
-            scriptPath = ((IPathEditorInput) editorInput).getPath().toString();
-        } else if (editorInput instanceof IURIEditorInput) {
-            final URI uri = ((IURIEditorInput) editorInput).getURI();
+        if (editorInput instanceof IFileEditorInput fei) {
+            scriptPath = fei.getFile().getFullPath().toString();
+        } else if (editorInput instanceof IPathEditorInput pei) {
+            scriptPath = pei.getPath().toString();
+        } else if (editorInput instanceof IURIEditorInput iei) {
+            final URI uri = iei.getURI();
             if ("file".equals(uri.getScheme())) {
                 scriptPath = new File(uri).getAbsolutePath();
             } else {
@@ -2434,19 +2490,28 @@ public class SQLEditor extends SQLEditorBase implements
             .append(NLS.bind(SQLEditorMessages.sql_editor_title_tooltip_path, scriptPath))
             .append("\n").append(NLS.bind(SQLEditorMessages.sql_editor_title_tooltip_connecton, dataSourceContainer.getName()))
             .append("\n").append(NLS.bind(SQLEditorMessages.sql_editor_title_tooltip_type, dataSourceContainer.getDriver().getFullName()))
-            .append("\n").append(NLS.bind(SQLEditorMessages.sql_editor_title_tooltip_url, dataSourceContainer.getConnectionConfiguration().getUrl()));
+            .append("\n")
+            .append(NLS.bind(SQLEditorMessages.sql_editor_title_tooltip_url, dataSourceContainer.getConnectionConfiguration().getUrl()));
 
-        SQLEditorVariablesResolver scriptNameResolver = new SQLEditorVariablesResolver(dataSourceContainer,
-                dataSourceContainer.getConnectionConfiguration(),
-                getExecutionContext(),
-                scriptPath,
-                null,
-                getProject());
+        SQLEditorVariablesResolver scriptNameResolver = new SQLEditorVariablesResolver(
+            dataSourceContainer,
+            dataSourceContainer.getConnectionConfiguration(),
+            getExecutionContext(),
+            scriptPath,
+            null,
+            getProject()
+        );
         if (scriptNameResolver.get(SQLPreferenceConstants.VAR_ACTIVE_DATABASE) != null) {
-            tip.append("\n").append(NLS.bind(SQLEditorMessages.sql_editor_title_tooltip_database, scriptNameResolver.get(SQLPreferenceConstants.VAR_ACTIVE_DATABASE)));
+            tip.append("\n").append(NLS.bind(
+                SQLEditorMessages.sql_editor_title_tooltip_database,
+                scriptNameResolver.get(SQLPreferenceConstants.VAR_ACTIVE_DATABASE)
+            ));
         }
         if (scriptNameResolver.get(SQLPreferenceConstants.VAR_ACTIVE_SCHEMA) != null) {
-            tip.append("\n").append(NLS.bind(SQLEditorMessages.sql_editor_title_tooltip_schema, scriptNameResolver.get(SQLPreferenceConstants.VAR_ACTIVE_SCHEMA)));
+            tip.append("\n").append(NLS.bind(
+                SQLEditorMessages.sql_editor_title_tooltip_schema,
+                scriptNameResolver.get(SQLPreferenceConstants.VAR_ACTIVE_SCHEMA)
+            ));
         }
         EditorUtils.appendProjectToolTip(tip, getProject());
 
@@ -2474,12 +2539,13 @@ public class SQLEditor extends SQLEditorBase implements
         DBPPreferenceStore preferenceStore = getActivePreferenceStore();
         String pattern = preferenceStore.getString(SQLPreferenceConstants.SCRIPT_TITLE_PATTERN);
         return GeneralUtils.replaceVariables(pattern, new SQLEditorVariablesResolver(
-                dataSourceContainer,
-                null,
-                getExecutionContext(),
-                scriptName,
-                file,
-                getProject()));
+            dataSourceContainer,
+            null,
+            getExecutionContext(),
+            scriptName,
+            file,
+            getProject()
+        ));
     }
 
     @Override
@@ -2643,7 +2709,8 @@ public class SQLEditor extends SQLEditorBase implements
         return processSQL(newTab, script, executeFromPosition, null, null);
     }
 
-    public boolean processSQL(boolean newTab, boolean script, boolean executeFromPosition, SQLQueryTransformer transformer,
+    public boolean processSQL(
+        boolean newTab, boolean script, boolean executeFromPosition, SQLQueryTransformer transformer,
         @Nullable SQLQueryListener queryListener
     ) {
         IDocument document = getDocument();
@@ -2669,8 +2736,8 @@ public class SQLEditor extends SQLEditorBase implements
                 // Get all queries from the current position
                 elements = extractScriptQueries(selection.getOffset(), document.getLength(), true, false, true);
                 // Replace first query with query under cursor for case if the cursor is in the middle of the query
-                elements.remove(0);
-                elements.add(0, extractActiveQuery());
+                elements.removeFirst();
+                elements.addFirst(extractActiveQuery());
             } else {
                 // Execute all SQL statements consequently
                 if (selection != null && selection.getLength() > 1) {
@@ -2722,16 +2789,16 @@ public class SQLEditor extends SQLEditorBase implements
         }
     }
 
-    public void exportDataFromQuery(@Nullable SQLScriptContext sqlScriptContext)
-    {
+    public void exportDataFromQuery(@Nullable SQLScriptContext sqlScriptContext) {
         List<SQLScriptElement> elements = getSelectedQueries();
 
         if (!elements.isEmpty()) {
             processQueries(elements, false, false, true, true, null, sqlScriptContext);
         } else {
             DBWorkbench.getPlatformUI().showError(
-                    "Extract data",
-                    "Choose one or more queries to export from");
+                "Extract data",
+                "Choose one or more queries to export from"
+            );
         }
     }
 
@@ -2752,7 +2819,8 @@ public class SQLEditor extends SQLEditorBase implements
         return elements;
     }
 
-    public boolean processQueries(@NotNull final List<SQLScriptElement> queries, final boolean forceScript,
+    public boolean processQueries(
+        @NotNull final List<SQLScriptElement> queries, final boolean forceScript,
         boolean newTab, final boolean export, final boolean checkSession,
         @Nullable final SQLQueryListener queryListener, @Nullable final SQLScriptContext context
     ) {
@@ -2760,7 +2828,7 @@ public class SQLEditor extends SQLEditorBase implements
             // Nothing to process
             return false;
         }
-        
+
         final DBPDataSourceContainer container = getDataSourceContainer();
         if (checkSession) {
             try {
@@ -2770,7 +2838,8 @@ public class SQLEditor extends SQLEditorBase implements
                         DBWorkbench.getPlatformUI().showError(
                             SQLEditorMessages.editors_sql_error_cant_obtain_session,
                             null,
-                            status);
+                            status
+                        );
                         return;
                     }
                     updateExecutionContext(() -> UIUtils.syncExec(() ->
@@ -2786,7 +2855,8 @@ public class SQLEditor extends SQLEditorBase implements
                 }
                 DBWorkbench.getPlatformUI().showError(
                     SQLEditorMessages.editors_sql_error_cant_obtain_session,
-                    ex.getMessage());
+                    ex.getMessage()
+                );
                 return false;
             }
         }
@@ -2817,7 +2887,7 @@ public class SQLEditor extends SQLEditorBase implements
         }
 
         final boolean isSingleQuery = !forceScript && (queries.size() == 1);
-        if (isSingleQuery && queries.get(0) instanceof SQLQuery query) {
+        if (isSingleQuery && queries.getFirst() instanceof SQLQuery query) {
             boolean isDropTable = query.isDropTableDangerous();
             if (query.isDeleteUpdateDangerous() || isDropTable) {
                 String targetName = "multiple tables";
@@ -2826,10 +2896,12 @@ public class SQLEditor extends SQLEditorBase implements
                 }
                 if (ConfirmationDialog.confirmAction(
                     getSite().getShell(),
-                    ConfirmationDialog.WARNING, isDropTable ? SQLPreferenceConstants.CONFIRM_DROP_SQL : SQLPreferenceConstants.CONFIRM_DANGER_SQL,
+                    ConfirmationDialog.WARNING,
+                    isDropTable ? SQLPreferenceConstants.CONFIRM_DROP_SQL : SQLPreferenceConstants.CONFIRM_DANGER_SQL,
                     ConfirmationDialog.CONFIRM,
                     query.getType().name(),
-                    targetName) != IDialogConstants.OK_ID
+                    targetName
+                ) != IDialogConstants.OK_ID
                 ) {
                     return false;
                 }
@@ -2926,7 +2998,8 @@ public class SQLEditor extends SQLEditorBase implements
             }
         }
 
-        if (curQueryProcessor == null || (newTab && useTabPerQuery(isSingleQuery) == (curQueryProcessor instanceof SingleTabQueryProcessor))) {
+        if (curQueryProcessor == null || (newTab
+            && useTabPerQuery(isSingleQuery) == (curQueryProcessor instanceof SingleTabQueryProcessor))) {
             createQueryProcessor(true, isSingleQuery, true);
         }
 
@@ -2937,7 +3010,8 @@ public class SQLEditor extends SQLEditorBase implements
             false,
             export,
             !export && getActivePreferenceStore().getBoolean(SQLPreferenceConstants.RESULT_SET_CLOSE_ON_ERROR),
-            queryListener);
+            queryListener
+        );
     }
 
     public boolean isActiveQueryRunning() {
@@ -2958,11 +3032,11 @@ public class SQLEditor extends SQLEditorBase implements
             SQLEditor.this,
             localFile,
             new OutputLogWriter(),
-            new SQLEditorParametersProvider(getSite()));
+            new SQLEditorParametersProvider(getSite())
+        );
     }
 
-    private void setStatus(String status, DBPMessageType messageType)
-    {
+    private void setStatus(String status, DBPMessageType messageType) {
         ResultSetViewer resultsView = getActiveResultSetViewer();
         if (resultsView != null) {
             resultsView.setStatus(status, messageType);
@@ -3007,7 +3081,7 @@ public class SQLEditor extends SQLEditorBase implements
             }
             if (confirmResult == IDialogConstants.YES_ID) {
                 for (int i = 0; i < tabsToClose.size(); i++) {
-                    if (i == 0 && tabsToClose.get(0).getData() instanceof SingleTabQueryProcessor sqp && keepFirstTab) {
+                    if (i == 0 && tabsToClose.getFirst().getData() instanceof SingleTabQueryProcessor sqp && keepFirstTab) {
                         // to avoid concurrent modification exception
                         List<QueryResultsContainer> results = new ArrayList<>(sqp.getResultContainers());
                         results.stream().skip(1).forEach(QueryResultsContainer::dispose);
@@ -3021,11 +3095,11 @@ public class SQLEditor extends SQLEditorBase implements
             }
             return confirmResult;
         } else if (tabsToClose.size() == 1) {
-            if (tabsToClose.get(0).getData() instanceof SingleTabQueryProcessor sqp) {
+            if (tabsToClose.getFirst().getData() instanceof SingleTabQueryProcessor sqp) {
                 // to avoid concurrent modification exception
                 List<QueryResultsContainer> results = new ArrayList<>(sqp.getResultContainers());
                 results.forEach(QueryResultsContainer::dispose);
-                tabsToClose.get(0).dispose();
+                tabsToClose.getFirst().dispose();
             }
         }
         // No need to close anything
@@ -3036,9 +3110,28 @@ public class SQLEditor extends SQLEditorBase implements
         return createScriptContext().fillQueryParameters(query, () -> null, false);
     }
 
-    private boolean checkSession(DBRProgressListener onFinish)
-        throws DBException
-    {
+    public void checkSessionAndConnect(DBRProgressListener onFinish) throws DBException {
+        if (getDataSourceContainer() != null
+            && getDataSourceContainer().isConnected()
+            && getExecutionContext() != null
+        ) {
+            if (onFinish != null) {
+                onFinish.onTaskFinished(Status.OK_STATUS);
+            }
+        } else {
+            checkSession(status -> {
+                if (status.isOK() && getExecutionContext() == null) {
+                    status = GeneralUtils.makeErrorStatus("Failed to create execution context after session check");
+                }
+
+                if (onFinish != null) {
+                    onFinish.onTaskFinished(status);
+                }
+            });
+        }
+    }
+
+    private boolean checkSession(DBRProgressListener onFinish) throws DBException {
         DBPDataSourceContainer ds = getDataSourceContainer();
         if (ds == null) {
             throw new DBException("No active connection");
@@ -3052,7 +3145,8 @@ public class SQLEditor extends SQLEditorBase implements
             }
         }
         DBPDataSource dataSource = ds.getDataSource();
-        if (dataSource != null && executionContextProvider == null && SQLEditorUtils.isOpenSeparateConnection(ds) && executionContext == null) {
+        if (dataSource != null && executionContextProvider == null && SQLEditorUtils.isOpenSeparateConnection(ds)
+            && executionContext == null) {
             initSeparateConnection(dataSource, () -> onFinish.onTaskFinished(Status.OK_STATUS), false);
             return executionContext != null;
         }
@@ -3070,7 +3164,7 @@ public class SQLEditor extends SQLEditorBase implements
     protected void onDataSourceChange() {
         this.onDataSourceChange(true);
     }
-    
+
     protected void onDataSourceChange(boolean contextChanged) {
         if (contextChanged) {
             reloadSyntaxRules();
@@ -3107,12 +3201,15 @@ public class SQLEditor extends SQLEditorBase implements
                 if (executionContext == null) {
                     rsv.setStatus(ModelMessages.error_not_connected_to_database);
                 } else {
-                    rsv.setStatus(SQLEditorMessages.editors_sql_staus_connected_to + executionContext.getDataSource().getContainer().getName() + "'"); //$NON-NLS-2$
+                    rsv.setStatus(
+                        SQLEditorMessages.editors_sql_staus_connected_to + executionContext.getDataSource().getContainer().getName()
+                            + "'"); //$NON-NLS-2$
                 }
             }
         }
 
-        if (lastExecutionContext == null || executionContext == null || lastExecutionContext.getDataSource() != executionContext.getDataSource()) {
+        if (lastExecutionContext == null || executionContext == null
+            || lastExecutionContext.getDataSource() != executionContext.getDataSource()) {
             // Update command states
             SQLEditorPropertyTester.firePropertyChange(SQLEditorPropertyTester.PROP_CAN_EXECUTE);
             SQLEditorPropertyTester.firePropertyChange(SQLEditorPropertyTester.PROP_CAN_EXPLAIN);
@@ -3264,7 +3361,8 @@ public class SQLEditor extends SQLEditorBase implements
         if (sqlFile == null || !sqlFile.exists()) {
             return;
         }
-        SQLPreferenceConstants.EmptyScriptCloseBehavior emptyScriptCloseBehavior = SQLPreferenceConstants.EmptyScriptCloseBehavior.getByName(
+        SQLPreferenceConstants.EmptyScriptCloseBehavior emptyScriptCloseBehavior
+            = SQLPreferenceConstants.EmptyScriptCloseBehavior.getByName(
             getActivePreferenceStore().getString(SQLPreferenceConstants.SCRIPT_DELETE_EMPTY));
         if (emptyScriptCloseBehavior == SQLPreferenceConstants.EmptyScriptCloseBehavior.NOTHING) {
             return;
@@ -3336,7 +3434,10 @@ public class SQLEditor extends SQLEditorBase implements
                                 // Active schema was changed? Update title and tooltip
                                 firePropertyChange(IWorkbenchPartConstants.PROP_TITLE);
                             }
-                            break;
+                            return;
+                        case BEFORE_CONNECT:
+                        case AFTER_CONNECT:
+                            return;
                         default:
                             break;
                     }
@@ -3440,8 +3541,7 @@ public class SQLEditor extends SQLEditorBase implements
                 SQLPreferenceConstants.CONFIRM_RUNNING_QUERY_CLOSE,
                 ConfirmationDialog.QUESTION,
                 jobsRunning
-            ) != IDialogConstants.YES_ID)
-            {
+            ) != IDialogConstants.YES_ID) {
                 return ISaveablePart2.CANCEL;
             }
         }
@@ -3467,7 +3567,9 @@ public class SQLEditor extends SQLEditorBase implements
         // End transaction
         if (executionContext != null) {
             UIServiceConnections serviceConnections = DBWorkbench.getService(UIServiceConnections.class);
-            if (serviceConnections != null && !serviceConnections.checkAndCloseActiveTransaction(new DBCExecutionContext[] {executionContext})) {
+            if (serviceConnections != null && !serviceConnections.checkAndCloseActiveTransaction(new DBCExecutionContext[] {
+                executionContext
+            })) {
                 return ISaveablePart2.CANCEL;
             }
         }
@@ -3483,7 +3585,8 @@ public class SQLEditor extends SQLEditorBase implements
             return ISaveablePart2.YES;
         }
 
-        if (super.isDirty() || (extraPresentationManager.activePresentation instanceof ISaveablePart && ((ISaveablePart) extraPresentationManager.activePresentation).isDirty())) {
+        if (super.isDirty() || (extraPresentationManager.activePresentation instanceof ISaveablePart
+            && ((ISaveablePart) extraPresentationManager.activePresentation).isDirty())) {
             return ISaveablePart2.DEFAULT;
         }
         return ISaveablePart2.YES;
@@ -3538,7 +3641,9 @@ public class SQLEditor extends SQLEditorBase implements
             return inputFile.getParent();
         }
         final DBPWorkspaceDesktop workspace = DBPPlatformDesktop.getInstance().getWorkspace();
-        final IFolder root = workspace.getResourceDefaultRoot(workspace.getActiveProject(), ScriptsHandlerImpl.class, false);
+        DBPProject activeProject = workspace.getActiveProject();
+        final IFolder root = activeProject == null ? null :
+            workspace.getResourceDefaultRoot(activeProject, ScriptsHandlerImpl.class, false);
         if (root != null) {
             URI locationURI = root.getLocationURI();
             if (IOUtils.isLocalURI(locationURI)) {
@@ -3556,8 +3661,7 @@ public class SQLEditor extends SQLEditorBase implements
         return null;
     }
 
-    private void showScriptPositionRuler(boolean show)
-    {
+    private void showScriptPositionRuler(boolean show) {
         IColumnSupport columnSupport = getAdapter(IColumnSupport.class);
         if (columnSupport != null) {
             RulerColumnDescriptor positionColumn = RulerColumnRegistry.getDefault().getColumnDescriptor(ScriptPositionColumn.ID);
@@ -3565,8 +3669,7 @@ public class SQLEditor extends SQLEditorBase implements
         }
     }
 
-    private void showStatementInEditor(final SQLQuery query, final boolean select)
-    {
+    private void showStatementInEditor(final SQLQuery query, boolean select) {
         UIUtils.runUIJob("Select SQL query in editor", monitor -> {
             if (isDisposed()) {
                 return;
@@ -3666,9 +3769,24 @@ public class SQLEditor extends SQLEditorBase implements
     }
 
     public enum ResultSetOrientation {
-        HORIZONTAL(SWT.VERTICAL, SQLEditorMessages.sql_editor_result_set_orientation_horizontal, SQLEditorMessages.sql_editor_result_set_orientation_horizontal_tip, true),
-        VERTICAL(SWT.HORIZONTAL, SQLEditorMessages.sql_editor_result_set_orientation_vertical, SQLEditorMessages.sql_editor_result_set_orientation_vertical_tip, true),
-        DETACHED(SWT.VERTICAL, SQLEditorMessages.sql_editor_result_set_orientation_detached, SQLEditorMessages.sql_editor_result_set_orientation_detached_tip, false);
+        HORIZONTAL(
+            SWT.VERTICAL,
+            SQLEditorMessages.sql_editor_result_set_orientation_horizontal,
+            SQLEditorMessages.sql_editor_result_set_orientation_horizontal_tip,
+            true
+        ),
+        VERTICAL(
+            SWT.HORIZONTAL,
+            SQLEditorMessages.sql_editor_result_set_orientation_vertical,
+            SQLEditorMessages.sql_editor_result_set_orientation_vertical_tip,
+            true
+        ),
+        DETACHED(
+            SWT.VERTICAL,
+            SQLEditorMessages.sql_editor_result_set_orientation_detached,
+            SQLEditorMessages.sql_editor_result_set_orientation_detached_tip,
+            false
+        );
 
         private final int sashOrientation;
         private final String label;
@@ -3699,8 +3817,7 @@ public class SQLEditor extends SQLEditorBase implements
         }
     }
 
-    public static class ResultSetOrientationMenuContributor extends CompoundContributionItem
-    {
+    public static class ResultSetOrientationMenuContributor extends CompoundContributionItem {
         @Override
         protected IContributionItem[] getContributionItems() {
             IEditorPart activeEditor = UIUtils.getActiveWorkbenchWindow().getActivePage().getActiveEditor();
@@ -3731,7 +3848,7 @@ public class SQLEditor extends SQLEditorBase implements
             return items.toArray(new IContributionItem[0]);
         }
     }
-    
+
     private interface QueryProcessingComponent {
     }
 
@@ -3745,7 +3862,7 @@ public class SQLEditor extends SQLEditorBase implements
         QueryProcessor(boolean makeDefault) {
             // Create first (default) results provider
             if (makeDefault) {
-                queryProcessors.add(0, this);
+                queryProcessors.addFirst(this);
             } else {
                 queryProcessors.add(this);
             }
@@ -3762,7 +3879,7 @@ public class SQLEditor extends SQLEditorBase implements
             return resultsProvider;
         }
 
-        private QueryResultsContainer createResultsProvider(DBSDataContainer dataContainer) {
+        private QueryResultsContainer createResultsProvider(@NotNull DBSDataContainer dataContainer) {
             QueryResultsContainer resultsProvider = createQueryResultsContainer(
                 resultContainers.size(),
                 getMaxResultsTabIndex(),
@@ -3790,26 +3907,16 @@ public class SQLEditor extends SQLEditorBase implements
         }
 
         @NotNull
-        QueryResultsContainer getFirstResults()
-        {
-            return resultContainers.get(0);
-        }
-        @Nullable
-        QueryResultsContainer getResults(SQLQuery query) {
-            for (QueryResultsContainer provider : resultContainers) {
-                if (provider.query == query) {
-                    return provider;
-                }
-            }
-            return null;
+        QueryResultsContainer getFirstResults() {
+            return resultContainers.getFirst();
         }
 
+        @NotNull
         List<QueryResultsContainer> getResultContainers() {
             return resultContainers;
         }
 
-        private void closeJob()
-        {
+        private void closeJob() {
             final SQLQueryJob job = curJob;
             if (job != null) {
                 if (job.getState() == Job.RUNNING) {
@@ -3838,7 +3945,7 @@ public class SQLEditor extends SQLEditorBase implements
             SQLScriptContext scriptContext,
             final List<SQLScriptElement> queries,
             boolean forceScript,
-            final boolean fetchResults,
+            boolean fetchResults,
             boolean export,
             boolean closeTabOnError,
             SQLQueryListener queryListener
@@ -3849,15 +3956,17 @@ public class SQLEditor extends SQLEditorBase implements
             }
             if (curJobRunning.get() > 0) {
                 DBWorkbench.getPlatformUI().showError(
-                        SQLEditorMessages.editors_sql_error_cant_execute_query_title,
-                    SQLEditorMessages.editors_sql_error_cant_execute_query_message);
+                    SQLEditorMessages.editors_sql_error_cant_execute_query_title,
+                    SQLEditorMessages.editors_sql_error_cant_execute_query_message
+                );
                 return false;
             }
             final DBCExecutionContext executionContext = getExecutionContext();
             if (executionContext == null) {
                 DBWorkbench.getPlatformUI().showError(
-                        SQLEditorMessages.editors_sql_error_cant_execute_query_title,
-                    ModelMessages.error_not_connected_to_database);
+                    SQLEditorMessages.editors_sql_error_cant_execute_query_title,
+                    ModelMessages.error_not_connected_to_database
+                );
                 return false;
             }
             final boolean isSingleQuery = !forceScript && (queries.size() == 1);
@@ -3877,7 +3986,10 @@ public class SQLEditor extends SQLEditorBase implements
                     for (SQLScriptElement element : queries) {
                         if (element instanceof SQLControlCommand controlCommand) {
                             try {
-                                SQLControlResult controlResult = scriptContext.executeControlCommand(new LoggingProgressMonitor(log), controlCommand);
+                                SQLControlResult controlResult = scriptContext.executeControlCommand(
+                                    new LoggingProgressMonitor(log),
+                                    controlCommand
+                                );
                                 if (controlResult.getTransformed() != null) {
                                     element = controlResult.getTransformed();
                                 }
@@ -3897,7 +4009,8 @@ public class SQLEditor extends SQLEditorBase implements
                         getSite().getWorkbenchWindow(),
                         producers,
                         null,
-                        new StructuredSelection(this));
+                        new StructuredSelection(this)
+                    );
                 } else {
                     boolean disableFetchCurrentResultSets;
                     if (queries.size() > QUERIES_COUNT_FOR_NO_FETCH_RESULT_SET_CONFIRMATION) {
@@ -3909,7 +4022,8 @@ public class SQLEditor extends SQLEditorBase implements
                                     SQLEditorMessages.sql_editor_confirm_no_fetch_result_for_big_script_yes,
                                     SQLEditorMessages.sql_editor_confirm_no_fetch_result_for_big_script_no
                                 ),
-                                List.of(SQLEditorMessages.sql_editor_confirm_no_fetch_result_for_big_script_remember), 0, 0);
+                                List.of(SQLEditorMessages.sql_editor_confirm_no_fetch_result_for_big_script_remember), 0, 0
+                            );
                             disableFetchCurrentResultSets = rs.choiceIndex == 0;
                             if (rs.forAllChoiceIndex != null) {
                                 isDisableFetchResultSet = disableFetchCurrentResultSets;
@@ -3924,10 +4038,11 @@ public class SQLEditor extends SQLEditorBase implements
                         isSingleQuery ? SQLEditorMessages.editors_sql_job_execute_query
                             : SQLEditorMessages.editors_sql_job_execute_script,
                         executionContext, resultsContainer, queries, scriptContext, this, listener,
-                        disableFetchCurrentResultSets);
+                        disableFetchCurrentResultSets
+                    );
 
                     if (isSingleQuery) {
-                        resultsContainer.query = queries.get(0);
+                        resultsContainer.query = queries.getFirst();
 
                         closeJob();
                         curJob = job;
@@ -3968,7 +4083,7 @@ public class SQLEditor extends SQLEditorBase implements
                         curQueryProcessor = null;
                         curResultsContainer = null;
                     } else {
-                        curQueryProcessor = queryProcessors.get(0);
+                        curQueryProcessor = queryProcessors.getFirst();
                         curResultsContainer = curQueryProcessor.getFirstResults();
                     }
                 }
@@ -3982,15 +4097,15 @@ public class SQLEditor extends SQLEditorBase implements
                 return curDataReceiver;
             }
             final boolean isStatsResult = (statement != null && statement.getData() == SQLQueryJob.STATS_RESULTS);
-//            if (isStatsResult) {
-//                // Maybe it was already open
-//                for (QueryResultsProvider provider : resultContainers) {
-//                    if (provider.query != null && provider.query.getData() == SQLQueryJob.STATS_RESULTS) {
-//                        resultSetNumber = provider.resultSetNumber;
-//                        break;
-//                    }
-//                }
-//            }
+            //            if (isStatsResult) {
+            //                // Maybe it was already open
+            //                for (QueryResultsProvider provider : resultContainers) {
+            //                    if (provider.query != null && provider.query.getData() == SQLQueryJob.STATS_RESULTS) {
+            //                        resultSetNumber = provider.resultSetNumber;
+            //                        break;
+            //                    }
+            //                }
+            //            }
             if (resultSetNumber >= resultContainers.size() && !isDisposed()) {
                 // Open new results processor in UI thread
                 UIUtils.syncExec(() -> createResultsProvider(resultSetNumber, false));
@@ -4007,17 +4122,19 @@ public class SQLEditor extends SQLEditorBase implements
                 String tabName = null;
                 String queryText = CommonUtils.truncateString(statement.getText(), 1000);
                 DBPDataSourceContainer dataSourceContainer = getDataSourceContainer();
-                
+
                 String dataSourceContainerName = dataSourceContainer == null ? "N/A" : dataSourceContainer.getName();
                 String processedQueryText = CommonUtils.isEmpty(queryText) ? "N/A" : queryText;
-                
+
                 String toolTip =
-                    NLS.bind(SQLEditorMessages.sql_editor_data_receiver_result_name_tooltip_connection, dataSourceContainerName) + 
-                    GeneralUtils.getDefaultLineSeparator() +
-                    NLS.bind(SQLEditorMessages.sql_editor_data_receiver_result_name_tooltip_time, 
-                            new SimpleDateFormat(DBConstants.DEFAULT_TIMESTAMP_FORMAT).format(new Date())) +
-                    GeneralUtils.getDefaultLineSeparator() +
-                    NLS.bind(SQLEditorMessages.sql_editor_data_receiver_result_name_tooltip_query, processedQueryText);
+                    NLS.bind(SQLEditorMessages.sql_editor_data_receiver_result_name_tooltip_connection, dataSourceContainerName) +
+                        GeneralUtils.getDefaultLineSeparator() +
+                        NLS.bind(
+                            SQLEditorMessages.sql_editor_data_receiver_result_name_tooltip_time,
+                            new SimpleDateFormat(DBConstants.DEFAULT_TIMESTAMP_FORMAT).format(new Date())
+                        ) +
+                        GeneralUtils.getDefaultLineSeparator() +
+                        NLS.bind(SQLEditorMessages.sql_editor_data_receiver_result_name_tooltip_query, processedQueryText);
                 // Special statements (not real statements) have their name in data
                 if (isStatsResult) {
                     tabName = SQLEditorMessages.editors_sql_statistics;
@@ -4064,14 +4181,14 @@ public class SQLEditor extends SQLEditorBase implements
             return new MultiTabsQueryResultsContainer(this, resultSetNumber, resultSetIndex, dataContainer);
         }
     }
-    
+
     class SingleTabQueryProcessor extends QueryProcessor {
         private static final int SCROLL_SPEED = 10;
         private boolean tabCreated;
         private CTabItem resultsTab;
         private ScrolledComposite tabContentScroller;
         private Composite sectionsContainer;
-        
+
         SingleTabQueryProcessor(boolean makeDefault) {
             super(makeDefault);
         }
@@ -4081,7 +4198,7 @@ public class SQLEditor extends SQLEditorBase implements
         protected QueryResultsContainer createQueryResultsContainer(int resultSetNumber, int resultSetIndex, boolean makeDefault) {
             return new SingleTabQueryResultsContainer(createSection(makeDefault), this, resultSetNumber, resultSetIndex, makeDefault);
         }
-        
+
         @Override
         protected QueryResultsContainer createQueryResultsContainer(
             int resultSetNumber,
@@ -4110,17 +4227,17 @@ public class SQLEditor extends SQLEditorBase implements
             });
             return new Pair<>(section, contents);
         }
-        
+
         public void relayoutContents() {
             tabContentScroller.setMinSize(sectionsContainer.computeSize(tabContentScroller.getBorderWidth(), SWT.DEFAULT));
             sectionsContainer.layout();
         }
-        
+
         private void prepareResultSetContainerHost(boolean makeDefault) {
             tabContentScroller = new ScrolledComposite(resultTabs, SWT.V_SCROLL | SWT.BORDER);
             tabContentScroller.setExpandHorizontal(true);
             tabContentScroller.setExpandVertical(true);
-        
+
             int tabIndex = obtainDesiredTabIndex(makeDefault);
             resultsTab = new CTabItem(resultTabs, SWT.NONE, tabIndex);
             resultsTab.setImage(IMG_DATA_GRID);
@@ -4133,7 +4250,7 @@ public class SQLEditor extends SQLEditorBase implements
             resultsTab.setControl(tabContentScroller);
             resultsTab.addDisposeListener(resultTabDisposeListener);
             UIUtils.disposeControlOnItemDispose(resultsTab);
-            
+
             sectionsContainer = new Composite(tabContentScroller, SWT.NONE);
             sectionsContainer.setLayout(new GridLayout(1, false));
             sectionsContainer.setLayoutData(new GridData(SWT.FILL, SWT.CENTER, true, false));
@@ -4141,7 +4258,8 @@ public class SQLEditor extends SQLEditorBase implements
 
             Listener scrollListener = event -> {
                 Control underScroll = (Control) event.widget;
-                if (underScroll.getShell() == tabContentScroller.getShell() && tabContentScroller.isVisible() && ((event.stateMask & SWT.CTRL) == SWT.CTRL)) {
+                if (underScroll.getShell() == tabContentScroller.getShell() && tabContentScroller.isVisible() && (
+                    (event.stateMask & SWT.CTRL) == SWT.CTRL)) {
                     Point clickedPoint = underScroll.toDisplay(event.x, event.y);
                     if (tabContentScroller.getClientArea().contains(tabContentScroller.toControl(clickedPoint))) {
                         for (Control c = underScroll; c != null; c = c.getParent()) {
@@ -4159,10 +4277,11 @@ public class SQLEditor extends SQLEditorBase implements
                 }
             };
             tabContentScroller.getDisplay().addFilter(SWT.MouseVerticalWheel, scrollListener);
-            tabContentScroller.addDisposeListener(e -> tabContentScroller.getDisplay().removeFilter(SWT.MouseVerticalWheel, scrollListener));
+            tabContentScroller.addDisposeListener(e -> tabContentScroller.getDisplay()
+                .removeFilter(SWT.MouseVerticalWheel, scrollListener));
         }
     }
-    
+
     public abstract class QueryResultsContainer implements
         DBSDataContainer,
         IResultSetContainer,
@@ -4171,7 +4290,7 @@ public class SQLEditor extends SQLEditorBase implements
         IResultSetContainerExt,
         SQLQueryContainer,
         ISmartTransactionManager,
-        IQueryExecuteController, 
+        IQueryExecuteController,
         QueryProcessingComponent {
 
         protected final QueryProcessor queryProcessor;
@@ -4279,7 +4398,11 @@ public class SQLEditor extends SQLEditorBase implements
         }
 
         @Override
-        public void openNewContainer(DBRProgressMonitor monitor, @NotNull DBSDataContainer dataContainer, @NotNull DBDDataFilter newFilter) {
+        public void openNewContainer(
+            DBRProgressMonitor monitor,
+            @NotNull DBSDataContainer dataContainer,
+            @NotNull DBDDataFilter newFilter
+        ) {
             UIUtils.syncExec(() -> {
                 QueryResultsContainer resultsProvider = queryProcessor.createResultsProvider(dataContainer);
                 CTabItem tabItem = resultsProvider.getResultsTab();
@@ -4383,9 +4506,13 @@ public class SQLEditor extends SQLEditorBase implements
         }
 
         @Override
-        public long countData(@NotNull DBCExecutionSource source, @NotNull DBCSession session, @Nullable DBDDataFilter dataFilter, long flags)
-            throws DBCException
-        {
+        public long countData(
+            @NotNull DBCExecutionSource source,
+            @NotNull DBCSession session,
+            @Nullable DBDDataFilter dataFilter,
+            long flags
+        )
+        throws DBCException {
             if (dataContainer != null) {
                 return dataContainer.countData(source, session, dataFilter, DBSDataContainer.FLAG_NONE);
             }
@@ -4441,8 +4568,8 @@ public class SQLEditor extends SQLEditorBase implements
                 return dataContainer.getName();
             }
             String name = lastGoodQuery != null ?
-                    lastGoodQuery.getOriginalText() :
-                    (query == null ? null : query.getOriginalText());
+                lastGoodQuery.getOriginalText() :
+                (query == null ? null : query.getOriginalText());
             if (name == null) {
                 name = "SQL";
             }
@@ -4563,11 +4690,11 @@ public class SQLEditor extends SQLEditorBase implements
         }
 
         public abstract CTabItem getResultsTab();
-        
+
         public abstract boolean isPinned();
 
         public abstract void setPinned(boolean pinned);
-        
+
         protected boolean isTabPinned(CTabItem tabItem) {
             return tabItem != null && !tabItem.isDisposed() && !tabItem.getShowClose();
         }
@@ -4596,7 +4723,7 @@ public class SQLEditor extends SQLEditorBase implements
             super(resultTabs, queryProcessor, resultSetNumber, resultSetIndex, makeDefault);
             resultsTab = createResultTab(makeDefault);
         }
-        
+
         MultiTabsQueryResultsContainer(
             @NotNull QueryProcessor queryProcessor,
             int resultSetNumber,
@@ -4610,7 +4737,7 @@ public class SQLEditor extends SQLEditorBase implements
         @NotNull
         private CTabItem createResultTab(boolean makeDefault) {
             int tabIndex = obtainDesiredTabIndex(makeDefault);
-            
+
             CTabItem resultsTab = new CTabItem(resultTabs, SWT.NONE, tabIndex);
             resultsTab.setImage(IMG_DATA_GRID);
             resultsTab.setData(this);
@@ -4629,7 +4756,7 @@ public class SQLEditor extends SQLEditorBase implements
             super.setTabName(tabName);
             resultsTab.setText(tabName);
         }
-        
+
         @Override
         public void updateResultsName(@NotNull String resultSetName, @Nullable String toolTip) {
             CTabItem tabItem = resultsTab;
@@ -4648,17 +4775,17 @@ public class SQLEditor extends SQLEditorBase implements
         public CTabItem getResultsTab() {
             return resultsTab;
         }
-        
+
         @Override
         public boolean isPinned() {
             return isTabPinned(resultsTab);
         }
-        
+
         @Override
         public void setPinned(boolean pinned) {
             setTabPinned(resultsTab, pinned);
         }
-        
+
         @Override
         public void detach() {
             super.detach();
@@ -4668,21 +4795,21 @@ public class SQLEditor extends SQLEditorBase implements
                 resultsTab = null;
             }
         }
-        
+
         @Override
         protected void dispose() {
             UIUtils.syncExec(resultsTab::dispose);
         }
     }
-    
+
     class SingleTabQueryResultsContainer extends QueryResultsContainer {
         private static final Integer MIN_VIEWER_HEIGHT = 150;
-        
+
         private final SingleTabQueryProcessor queryProcessor;
         private final Section section;
 
         private GridData rsvConstrainedLayout;
-        
+
         SingleTabQueryResultsContainer(
             @NotNull Pair<Section, Composite> sectionAndContents,
             @NotNull SingleTabQueryProcessor queryProcessor,
@@ -4722,7 +4849,7 @@ public class SQLEditor extends SQLEditorBase implements
                 };
             }
         }
-        
+
         private void setupSection(@NotNull Composite sectionContents) {
             Composite control = this.viewer.getControl();
             sectionContents.setData(ResultSetViewer.CONTROL_ID, this.viewer);
@@ -4745,12 +4872,12 @@ public class SQLEditor extends SQLEditorBase implements
             });
             line.addMouseMoveListener(e -> {
                 if ((e.stateMask & SWT.BUTTON1) != 0) {
-                    Tracker tracker = new Tracker(queryProcessor.sectionsContainer,  SWT.RESIZE | SWT.DOWN);
+                    Tracker tracker = new Tracker(queryProcessor.sectionsContainer, SWT.RESIZE | SWT.DOWN);
                     tracker.setStippled(true);
                     tracker.setCursor(tracker.getDisplay().getSystemCursor(SWT.CURSOR_SIZENS));
                     Point size = control.getSize();
                     Point origin = queryProcessor.sectionsContainer.toControl(control.toDisplay(control.getLocation()));
-                    tracker.setRectangles(new Rectangle[] { new Rectangle(origin.x, origin.y, size.x, size.y + line.getSize().y / 2) });
+                    tracker.setRectangles(new Rectangle[] {new Rectangle(origin.x, origin.y, size.x, size.y + line.getSize().y / 2)});
                     if (tracker.open()) {
                         Rectangle after = tracker.getRectangles()[0];
                         int newHeight = after.height - line.getSize().y / 2;
@@ -4780,10 +4907,10 @@ public class SQLEditor extends SQLEditorBase implements
             };
             control.getDisplay().addFilter(SWT.MouseDown, displayListener);
             control.addDisposeListener(e -> control.getDisplay().removeFilter(SWT.MouseDown, displayListener));
-            
+
             queryProcessor.relayoutContents();
         }
-        
+
         @Override
         public void setTabName(@NotNull String tabName) {
             super.setTabName(tabName);
@@ -4812,16 +4939,16 @@ public class SQLEditor extends SQLEditorBase implements
         public boolean isPinned() {
             return isTabPinned(queryProcessor.resultsTab);
         }
-        
+
         @Override
         public void setPinned(boolean pinned) {
             setTabPinned(queryProcessor.resultsTab, pinned);
         }
-        
+
         @Override
         public void handleExecuteResult(DBCExecutionResult result) {
             super.handleExecuteResult(result);
-            
+
             if (this.viewer.getActivePresentation().getControl() instanceof Spreadsheet s) {
                 UIUtils.syncExec(() -> {
                     Point spreadsheetPreferredSize = s.computeSize(SWT.DEFAULT, SWT.DEFAULT, true);
@@ -4856,7 +4983,7 @@ public class SQLEditor extends SQLEditorBase implements
             }
         }
         return tabIndex;
-    }   
+    }
 
     @NotNull
     protected QueryResultsDecorator createQueryResultsDecorator() {
@@ -4878,7 +5005,7 @@ public class SQLEditor extends SQLEditorBase implements
             }
             if (tab.getData() instanceof SingleTabQueryProcessor stqp) {
                 List<QueryResultsContainer> results = stqp.getResultContainers();
-                maxIndex = Math.max(maxIndex, results.get(results.size() - 1).getResultSetIndex());
+                maxIndex = Math.max(maxIndex, results.getLast().getResultSetIndex());
             }
         }
         return maxIndex;
@@ -4932,7 +5059,9 @@ public class SQLEditor extends SQLEditorBase implements
                     clearProblems(null);
                 });
             } finally {
-                if (extListener != null) extListener.onStartScript();
+                if (extListener != null) {
+                    extListener.onStartScript();
+                }
             }
         }
 
@@ -4967,7 +5096,9 @@ public class SQLEditor extends SQLEditorBase implements
                     lastUIUpdateTime = System.currentTimeMillis();
                 }
             } finally {
-                if (extListener != null) extListener.onStartQuery(session, query);
+                if (extListener != null) {
+                    extListener.onStartQuery(session, query);
+                }
             }
         }
 
@@ -5019,7 +5150,8 @@ public class SQLEditor extends SQLEditorBase implements
                             DBUtils.refreshContextDefaultsAndReflect(
                                 session.getProgressMonitor(),
                                 contextDefaults,
-                                executionContext);
+                                executionContext
+                            );
                         } catch (Exception e) {
                             log.debug("Error refreshing context defaults", e);
                         }
@@ -5041,7 +5173,8 @@ public class SQLEditor extends SQLEditorBase implements
             }
             if (error != null) {
                 setStatus(GeneralUtils.getFirstMessage(error), DBPMessageType.ERROR);
-                SQLQuery originalQuery = curResultsContainer.query instanceof SQLQuery sqlQuery ? sqlQuery : null; // SQLQueryResult stores modified query
+                SQLQuery originalQuery = curResultsContainer.query instanceof SQLQuery sqlQuery ? sqlQuery
+                    : null; // SQLQueryResult stores modified query
                 if (!visualizeQueryErrors(monitor, query, error, originalQuery)) {
                     int errorQueryOffset = query.getOffset();
                     int errorQueryLength = query.getLength();
@@ -5069,7 +5202,7 @@ public class SQLEditor extends SQLEditorBase implements
                     if (activeResultsTab != null && !activeResultsTab.isDisposed()) {
                         setResultTabSelection(activeResultsTab);
                     } else {
-                        setResultTabSelection(queryProcessor.resultContainers.get(0).getResultsTab());
+                        setResultTabSelection(queryProcessor.resultContainers.getFirst().getResultsTab());
                     }
                 }
                 // Set tab names by query results names
@@ -5123,15 +5256,16 @@ public class SQLEditor extends SQLEditorBase implements
                 }
             }
             // Beep
-            if (dataSourceContainer != null && !scriptMode && getActivePreferenceStore().getBoolean(SQLPreferenceConstants.BEEP_ON_QUERY_END)) {
+            if (dataSourceContainer != null && !scriptMode
+                && getActivePreferenceStore().getBoolean(SQLPreferenceConstants.BEEP_ON_QUERY_END)) {
                 Display.getCurrent().beep();
             }
             // Notify agent
             UIServiceSystemAgent serviceSystemAgent = DBWorkbench.getService(UIServiceSystemAgent.class);
             if (serviceSystemAgent != null && result.getQueryTime() > serviceSystemAgent.getLongOperationTimeout() * 1000) {
                 serviceSystemAgent.notifyAgent(
-                        "Query completed [" + getEditorInput().getName() + "]" + GeneralUtils.getDefaultLineSeparator() +
-                                CommonUtils.truncateString(query.getText(), 200), !result.hasError() ? IStatus.INFO : IStatus.ERROR);
+                    "Query completed [" + getEditorInput().getName() + "]" + GeneralUtils.getDefaultLineSeparator() +
+                        CommonUtils.truncateString(query.getText(), 200), !result.hasError() ? IStatus.INFO : IStatus.ERROR);
             }
         }
 
@@ -5161,7 +5295,9 @@ public class SQLEditor extends SQLEditorBase implements
                     }
                 });
             } finally {
-                if (extListener != null) extListener.onEndScript(statistics, hasErrors);
+                if (extListener != null) {
+                    extListener.onEndScript(statistics, hasErrors);
+                }
             }
 
         }
@@ -5184,6 +5320,7 @@ public class SQLEditor extends SQLEditorBase implements
 
     private class FindReplaceTarget extends DynamicFindReplaceTarget {
         private IFindReplaceTarget previousTarget = null;
+
         @Override
         public IFindReplaceTarget getTarget() {
             //getTarget determines current composite used for find/replace
@@ -5214,6 +5351,7 @@ public class SQLEditor extends SQLEditorBase implements
 
     private class DynamicSelectionProvider extends CompositeSelectionProvider {
         private boolean lastFocusInEditor = true;
+
         @Override
         public ISelectionProvider getProvider() {
             if (extraPresentationManager.activePresentation != null) {
@@ -5228,7 +5366,8 @@ public class SQLEditor extends SQLEditorBase implements
             TextViewer textViewer = getTextViewer();
             boolean focusInEditor = textViewer != null && textViewer.getTextWidget().isFocusControl();
             if (!focusInEditor) {
-                if (rsv != null && rsv.getActivePresentation().getControl() != null && rsv.getActivePresentation().getControl().isFocusControl()) {
+                if (rsv != null && rsv.getActivePresentation().getControl() != null && rsv.getActivePresentation().getControl()
+                    .isFocusControl()) {
                     focusInEditor = false;
                 } else {
                     focusInEditor = lastFocusInEditor;
@@ -5349,6 +5488,7 @@ public class SQLEditor extends SQLEditorBase implements
                     presentations.put(descriptor, activePresentation);
 
                     SQLEditorPropertyTester.firePropertyChange(SQLEditorPropertyTester.PROP_CAN_EXECUTE);
+
                     return true;
                 }
             } else {
@@ -5362,6 +5502,7 @@ public class SQLEditor extends SQLEditorBase implements
                     activePresentation.showPresentation(SQLEditor.this, false);
 
                     SQLEditorPropertyTester.firePropertyChange(SQLEditorPropertyTester.PROP_CAN_EXECUTE);
+
                     return true;
                 }
             }
@@ -5471,6 +5612,7 @@ public class SQLEditor extends SQLEditorBase implements
 
     private class SaveJob extends AbstractJob {
         private transient Boolean success = null;
+
         SaveJob() {
             super("Save '" + getPartName() + "' data changes...");
             setUser(true);
@@ -5789,6 +5931,7 @@ public class SQLEditor extends SQLEditorBase implements
         private boolean stopped = false;
         private int tickCount;
         private Cursor oldCursor;
+
         protected ConnectVisualizer() {
             super("Connect visualizer");
             setSystem(true);
